--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,11 @@
     "bootstrap-icons": "^1.11.2",
     "@popperjs/core": "^2.11.8",
     "chart.js": "^4.4.1",
-    "vue-chartjs": "^5.3.0"
+    "vue-chartjs": "^5.3.0",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "vite": "^5.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.0",
-    "vite": "^5.0.0",
     "concurrently": "^8.2.2"
   }
 } 
